kubernetes/traefik/vitess/vitess_vtctld_ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vtctld-web
  namespace: vitess
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`vtctld.tagenal`)
      services:
        - namespace: vitess
          name: vitess-vtctld-047eb1a6
          port: 15000
