kubernetes/traefik/vitess/vitess_vtgate_ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vtgate-mysql
  namespace: vitess
spec:
  entryPoints:
    - mysql
  routes:
    - kind: Rule
      match: HostSNI(`*`)
      services:
        - namespace: vitess
          name: vitess-zone1-vtgate-1c6a88c4
          port: 3306
